tap/sample-workload/expose-workload-via-ingress/ingress-for-server.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanzu-java-web-app-ingress
  annotations:
    ako.vmware.com/enable-tls: "true"
  labels:
    loadbalancer: run-1-glsb-dev
spec:
  ingressClassName: avi-lb
  tls:
  - hosts: 
    - myapp.apps.tap.lab.pcfdemo.net
    secretName: app-tls-secret
  rules:
    - host: myapp.apps.tap.lab.pcfdemo.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tanzu-java-web-app
              port:
                number: 8080
