tap/sample-workload/expose-workload-via-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanzu-java-web-app-ingress
spec:
  tls:
  - hosts: 
    - new-tanzu-java-web-app.my-space.tap-choice-sculpin.tapsandbox.com
    secretName: route-e68e20dd-5c20-4c5f-9ec6-2e27394be4c6
  rules:
    - host: new-tanzu-java-web-app.my-space.tap-choice-sculpin.tapsandbox.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tanzu-java-web-app-00001-private
              port:
                number: 80
